crates/jsonschema-codegen/tests/ui/invalid_content_encoding_type.rs
#[jsonschema::validator(
    schema = r#"{"contentEncoding":42}"#,
    draft = referencing::Draft::Draft7
)]
struct InvalidContentEncodingTypeValidator;

fn main() {}
